--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <div id="content"> </div>
 
         <div id='home' class="row hide">
-            <div class="box blue" onclick="parent.location='https://davidtqhoang.github.io/system?page=booking'">
+            <div class="box blue" onclick="parent.location='https://davidtqhoang.github.io?page=booking'">
                 Booking
             </div>
-            <div class="box orange" onclick="parent.location='https://davidtqhoang.github.io/system?page=checkin'">
+            <div class="box orange" onclick="parent.location='https://davidtqhoang.github.io?page=checkin'">
                 Self-checkin
             </div>
 
@@ -81,7 +81,7 @@
 
         <div id='row2' class="row hide">
 
-            <div class="box green" onclick="parent.location='https://davidtqhoang.github.io/system?page=appointments'">
+            <div class="box green" onclick="parent.location='https://davidtqhoang.github.io?page=appointments'">
                 Appointments
             </div>
         </div>
